welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: not found: value grosPot
grosPot(); gauche(); recule(); droite(); while (!estDosMur) {recule()}; droite(); droite(); avance(4); gauche(); grosPot()
^FlowerCase:1: error: not found: value grosPot
grosPot(); gauche(); recule(); droite(); while (!estDosMur) {recule()}; droite(); droite(); avance(4); gauche(); grosPot()
                                                                                                                 ^FlowerCase:30: error: not found: value doite
  growFlowers(); doite(); avance(5); gauche() ; avance(6); Fleur(Color.blue); avance(); gauche(); avance(2); droite(); growFlowers(); setPost(9,14)} 
                 ^FlowerCase:30: error: not found: value setPost
  growFlowers(); doite(); avance(5); gauche() ; avance(6); Fleur(Color.blue); avance(); gauche(); avance(2); droite(); growFlowers(); setPost(9,14)} 
                                                                                                                                      ^